; ModuleID = '/home/carl/AnghaBench/linux/drivers/crypto/extr_hifn_795x.c_hifn_read_0.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/crypto/extr_hifn_795x.c_hifn_read_0.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hifn_device = type { i64* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.hifn_device*, i64)* @hifn_read_0 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @hifn_read_0(%struct.hifn_device* %0, i64 %1) #0 {
  %3 = alloca %struct.hifn_device*, align 8
  %4 = alloca i64, align 8
  store %struct.hifn_device* %0, %struct.hifn_device** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load %struct.hifn_device*, %struct.hifn_device** %3, align 8
  %6 = getelementptr inbounds %struct.hifn_device, %struct.hifn_device* %5, i32 0, i32 0
  %7 = load i64*, i64** %6, align 8
  %8 = getelementptr inbounds i64, i64* %7, i64 0
  %9 = load i64, i64* %8, align 8
  %10 = load i64, i64* %4, align 8
  %11 = add nsw i64 %9, %10
  %12 = call i64 @readl(i64 %11)
  ret i64 %12
}

declare dso_local i64 @readl(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
